minhas vagas controller
